--- a/app/tour-itinerary.component.html
+++ b/app/tour-itinerary.component.html
@@ -16,6 +16,6 @@
 
 <div class="map_panel">
   <sebm-google-map [latitude]="map_center_lat" [longitude]="map_center_lng" *ngIf="tour" (centerChange)="centerChange($event)">
-    <sebm-google-map-marker *ngFor="let city of tour.cities; let i = index" [latitude]="city.lat" [longitude]="city.lng"></sebm-google-map-marker>
+    <sebm-google-map-marker *ngFor="let city of tour.cities; let i = index" [latitude]="city.coords.lat" [longitude]="city.coords.lng"></sebm-google-map-marker>
   </sebm-google-map>
 </div>
